--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <title>Document</title>
     </head>
     <body>
-        <div class="container">
-           <div class="prev">
-            prova
-           </div>
+        <div id="root">
+            <div class="container">
+            <div class="prev">
+                <i class="fas fa-angle-left"></i>
+            </div>
 
-           <div class="photo">
-            prova
-           </div>
+            <div class="photo">
+                <img :src=images>
+            </div>
 
-           <div class="next">
-            prova
-           </div>
+            <div class="next">
+                <i class="fas fa-angle-right"></i>
+            </div>
 
+            </div>
         </div>
-
         <script src="js/script.js"></script>
     </body>
 </html>
